--- a/services/customer-service/src/main/resources/application.properties
+++ b/services/customer-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.h2.console.enabled=true
 
 
 #actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health, refresh
 
 spring.cloud.discovery.enabled=false
 spring.cloud.config.enabled=false
