feat : implement code dynamic for the gateway micro service

--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.application.name=gateway-service
 server.port=8888
+spring.cloud.discovery.enabled=true
 
-spring.cloud.discovery.enabled=false
+
+#default zone
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+
+#convertion en miniscule name micro service
+spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
