--- a/services/customer-service/src/main/resources/application.properties
+++ b/services/customer-service/src/main/resources/application.properties
@@ -3,9 +3,13 @@ server.port=8081
 spring.datasource.url=jdbc:h2:mem:customers-db
 spring.h2.console.enabled=true
 
+spring.cloud.config.enabled=false
+spring.cloud.discovery.enabled=true
 
 #actuator
 management.endpoints.web.exposure.include=health, refresh
+#default zone
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
-spring.cloud.discovery.enabled=false
-spring.cloud.config.enabled=false
+
