--- a/services/inventory-service/src/main/resources/application.properties
+++ b/services/inventory-service/src/main/resources/application.properties
@@ -3,9 +3,11 @@ server.port=8082
 spring.datasource.url=jdbc:h2:mem:products-db
 spring.h2.console.enabled=true
 
+spring.cloud.discovery.enabled=true
+spring.cloud.config.enabled=false
 
 #actuator
 management.endpoints.web.exposure.include=*
-
-spring.cloud.discovery.enabled=false
-spring.cloud.config.enabled=false
+#default zone
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
