--- a/services/billing-service/src/main/resources/application.properties
+++ b/services/billing-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=billing-service
 server.port=8083
 spring.datasource.url=jdbc:h2:mem:billing-db
 spring.h2.console.enabled=true
-
+#spring.jpa.hibernate.ddl-auto=update
 spring.cloud.config.enabled=false
 spring.cloud.discovery.enabled=true
 
