--- a/services/customer-service/src/main/resources/application.properties
+++ b/services/customer-service/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port=8081
 spring.datasource.url=jdbc:h2:mem:customers-db
 spring.h2.console.enabled=true
 
-spring.cloud.config.enabled=false
+spring.config.import=optional:configserver:http://localhost:9999
+
+spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
 
 #actuator
