feat : add dynamic config for each micro service

--- a/config-repo/billing-service.properties
+++ b/config-repo/billing-service.properties
@@ -1,13 +1,10 @@
-customer.params.x=123
-customer.params.y=93
-
+spring.datasource.url=jdbc:h2:mem:billing-db
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:customers-db
-
+#spring.jpa.hibernate.ddl-auto=update
 spring.cloud.discovery.enabled=true
 
 #actuator
-management.endpoints.web.exposure.include=health, refresh
+management.endpoints.web.exposure.include=*
 #default zone
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
