--- a/services/billing-service/src/main/resources/application.properties
+++ b/services/billing-service/src/main/resources/application.properties
@@ -1,15 +1,6 @@
 spring.application.name=billing-service
 server.port=8083
-spring.datasource.url=jdbc:h2:mem:billing-db
-spring.h2.console.enabled=true
-#spring.jpa.hibernate.ddl-auto=update
-spring.cloud.config.enabled=false
-spring.cloud.discovery.enabled=true
-
-#actuator
-management.endpoints.web.exposure.include=*
-#default zone
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
+spring.cloud.config.enabled=true
+spring.config.import=optional:configserver:http://localhost:9999
 
 
