--- a/services/inventory-service/src/main/resources/application.properties
+++ b/services/inventory-service/src/main/resources/application.properties
@@ -1,13 +1,5 @@
 spring.application.name=inventory-service
 server.port=8082
-spring.datasource.url=jdbc:h2:mem:products-db
-spring.h2.console.enabled=true
+spring.cloud.config.enabled=true
+spring.config.import=optional:configserver:http://localhost:9999
 
-spring.cloud.discovery.enabled=true
-spring.cloud.config.enabled=false
-
-#actuator
-management.endpoints.web.exposure.include=*
-#default zone
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
