feat : update application properties file

--- a/config-repo/application.properties
+++ b/config-repo/application.properties
@@ -1,2 +1,11 @@
 global.params.p1=56099
 global.params.p2=21076
+spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
+spring.cloud.discovery.enabled=true
+
+#actuator
+management.endpoints.web.exposure.include=*
+#default zone
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
