--- a/config-repo/customer-service-dev.properties
+++ b/config-repo/customer-service-dev.properties
@@ -1,2 +1,3 @@
-customer.params.x=900
-customer.params.y=247
+customer.params.x=135
+customer.params.y=309
+spring.datasource.url=jdbc:h2:mem:customers-db
