--- a/config-repo/customer-service-prod.properties
+++ b/config-repo/customer-service-prod.properties
@@ -1,2 +1,4 @@
-customer.params.x=1000
-customer.params.y=891
+customer.params.x=568
+customer.params.y=9377
+spring.datasource.url=jdbc:h2:mem:customers-db
+
