--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=config-service
 server.port=9999
-spring.cloud.discovery.enabled=true
-spring.cloud.config.server.git.uri=file:///C:/Users/hp/Desktop/AMS/ms-ecom-app/config-repo
+#spring.cloud.config.server.git.uri=file:///C:/Users/hp/Desktop/AMS/ms-ecom-app/config-repo
+spring.cloud.config.server.git.uri=https://github.com/ouss-issib/ms-ecom-config
