--- a/angular-client/frontent-ecomerce-ms-app/package.json
+++ b/angular-client/frontent-ecomerce-ms-app/package.json
@@ -23,6 +23,7 @@
   "private": true,
   "packageManager": "npm@11.6.1",
   "dependencies": {
+    "@angular/animations": "^21.0.1",
     "@angular/cdk": "^21.0.1",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
