feat: Update customer and product services to use embedded response structure and fix base URLs

--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-spring.application.name=gateway-service
 server.port=8888
+
+spring.application.name=gateway-service
+
 spring.cloud.discovery.enabled=true
 
-
-#default zone
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.prefer-ip-address=true
-
-#convertion en miniscule name micro service
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
+
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations[/**].allowedOrigins=*
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations[/**].allowedMethods=*
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations[/**].allowedHeaders=*
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations[/**].allowCredentials=false
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
